# epicnotify-bot

./: .env.example  .gitignore  LICENSE  README.md  main.py  pyproject.toml
src/epicnotify/: bot.py  config.py  database.py  keyboards.py  utils.py  worker.py
src/epicnotify/handlers/: common.py  games.py  sub.py
src/epicnotify/services/: epic.py  vk.py
